--- a/tailwind.css
+++ b/tailwind.css
@@ -38,6 +38,6 @@
 }
 
 @keyframes scroll {
-  0% { transform: translateX(-100vw); }
-  100% { transform: translateX(100vw); }
+  0% { transform: translateX(100vw); }
+  100% { transform: translateX(-100%); }
 }
